--- a/ShowMLB/ShowMLB.vbproj
+++ b/ShowMLB/ShowMLB.vbproj
@@ -92,6 +92,18 @@
     <Compile Include="Forms\frmSplash.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Player Forms\frmPitchers.Designer.vb">
+      <DependentUpon>frmPitchers.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Player Forms\frmPitchers.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Player Forms\frmPlayer.Designer.vb">
+      <DependentUpon>frmPlayer.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Player Forms\frmPlayer.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\Team Forms\frmPostseason.Designer.vb">
       <DependentUpon>frmPostseason.vb</DependentUpon>
     </Compile>
@@ -132,6 +144,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmSplash.resx">
       <DependentUpon>frmSplash.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Player Forms\frmPitchers.resx">
+      <DependentUpon>frmPitchers.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Player Forms\frmPlayer.resx">
+      <DependentUpon>frmPlayer.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Team Forms\frmPostseason.resx">
       <DependentUpon>frmPostseason.vb</DependentUpon>
