--- a/ShowMLB/ShowMLB.vbproj
+++ b/ShowMLB/ShowMLB.vbproj
@@ -153,6 +153,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Modules\mdlGlobals.vb" />
+    <Compile Include="Modules\mdlStandings.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
